@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -44,8 +44,8 @@ public class RunInfo extends AbstractInfo {
     private final boolean hasMultipleTests;
 
     public RunInfo(List<DeclaredTest> tests) {
-        super(tests.get(0).getTestMethod().getDeclaringClass());
-        this.test = tests.get(0);
+        super(tests.getFirst().getTestMethod().getDeclaringClass());
+        this.test = tests.getFirst();
         this.testMethod = test.getTestMethod();
         this.hasMultipleTests = tests.size() != 1;
         if (hasMultipleTests) {
